gcc/testsuite/gcc.target/nvptx/decl-shared-init.c
int var __attribute__((shared)) = 0; /* { dg-error "static initialization .* not supported" } */
